# snek-namespace-microlib-monorepo

./: Pipfile  mkdocs.yml  pyproject.toml
.github/workflows/: sneks.yml
CuteSnek/: setup.py
CuteSnek/Snek/CuteSnek/: CuteSnek.py  __init__.py
CuteSnek/tests/: test_CuteSnek.py
FancySnek/: setup.cfg  setup.py
FancySnek/Snek/FancySnek/: FancySnek.py  __init__.py
FancySnek/tests/: test_FancySnek.py
SnekCore/: setup.py
SnekCore/Snek/SnekCore/: AbstractSnek.py  SimpleSnek.py  __init__.py
SnekCore/tests/: test_AbstractSnek.py  test_SimpleSnek.py
docs/: SnekCore.md
libs/CuteSnek/Snek/CuteSnek/: CuteSnek.py
libs/FancySnek/Snek/FancySnek/: FancySnek.py
libs/SnekCore/Snek/SnekCore/: AbstractSnek.py  SimpleSnek.py
libs/SnekCore/cli/: cli.py
