
[tool.poetry]
name = "snek-microlib"
version = "0.0.1"
description = ""
authors = ["myg0t <mjtaylorroberts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
snekcore = {path = "libs/SnekCore", develop = true}
fancysnek = {path = "libs/FancySnek", develop = true}
cutesnek = {path = "libs/CuteSnek", develop = true}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
